[project]
name = "disco-rl-pytorch"
version = "0.0.1"
description = "Implementation of DiscoRL, Discovering state-of-the-art reinforcement learning algorithms"
authors = [
    { name = "Phil Wang", email = "lucidrains@gmail.com" }
]
readme = "README.md"
requires-python = ">= 3.10"
license = { file = "LICENSE" }
keywords = [
    'artificial intelligence',
    'deep learning',
    'meta gradients',
    'reinforcement learning'
]

classifiers=[
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3.10',
]

dependencies = [
    "einx>=0.3.0",
    "einops>=0.8.1",
    "torch>=2.5",
    "torch-einops-utils>=0.1.2",
    "x-mlps-pytorch",
    "x-transformers",
]

[project.urls]
Homepage = "https://pypi.org/project/disco-rl-pytorch/"
Repository = "https://codeberg.org/lucidrains/disco-rl-pytorch"

[project.optional-dependencies]
examples = []
test = [
    "pytest"
]

[tool.pytest.ini_options]
pythonpath = [
    "."
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build]
include = [
    "disco_rl_pytorch",
    "pyproject.toml",
    "README.md",
    "LICENSE"
]

[tool.hatch.build.targets.wheel]
packages = ["disco_rl_pytorch"]
